<resources>
    <string name="app_name">P2</string>
    <string name="playerName"></string>
    <string name="rollDice">Roll</string>
    <string name="rollDice_rules">
        1. Place the status board in the middle of the table.
        \n2. Place the status marker on the one space.
        \n3. Place all of the dice to the left of the status board in three piles based on the three different types of dice: ground floor, upper floor, penthouse. These piles are referred to as the construction yard.
        \n4. Take one dice of each type and place them to the right of the status board. This pile is known as the abandoned district.
        \n5. All of the building tiles should be placed near the status board.
        \n6. The player who has most recently been in a high-rise building will start the game.
        \n7. Starting with the first player and moving clockwise players will receive one die set to a specific ground floor to start the game. The first player will receive a high-rise/orange ground floor. The second player will receive a mid-rise/blue ground floor. The third player will get a low-rise/purple ground floor. The fourth player receives no die at the beginning of the game.
    </string>
    <string name="updatePlayerNameTxt">Update</string>
    <string name="editPlayerName">Type your name here...</string>
</resources>